<?xml version="1.0"?>
<package format="2">
  <name>local_path_planner</name>
  <version>4.0.1</version>
  <description>The local_path_planner package</description>

  <maintainer email="tlemsl8963@gmail.com">vision</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tracking_msg</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>rviz</build_depend>


  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tracking_msg</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>rviz</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tracking_msg</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>rviz</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>


  </export>
</package>
